scenarios/mimir-data-migration/manifests/minio.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: s3

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cli
  namespace: s3
spec:
  ingressClassName: contour
  rules:
    - host: minio.s3.loc
      http:
        paths:
          - backend:
              service:
                name: minio-console
                port:
                  name: http-console
            path: /
            pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3
  namespace: s3
spec:
  ingressClassName: contour
  rules:
    - host: s3.loc
      http:
        paths:
          - backend:
              service:
                name: minio
                port:
                  name: http-minio
            path: /
            pathType: Prefix
